feat: forms done/fix: footer

--- a/src/pages/formulario.html
+++ b/src/pages/formulario.html
@@ -12,65 +12,83 @@
 </head>
 
 <body>
-    <header class="header-back">
-        <div class="container">
-            <nav class="nav-principal">
-                <a href="index.html" class="link-logo"><img src="Imagens/LogoBranco_Sem_Fundo.png" alt=""></a>
-                <h1>AP Senac</h1>
-                <ul class="nav-lista">
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="sobre.html">Sobre o Projeto</a></li>
-                    <li><a href="formulario.html">Contato</a></li>
+    <header class="bg-[#222]">
+        <div class="container mx-auto max-w-7xl">
+            <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
+                <a href="/src/index.html" class="link-logo">
+                    <img src="/src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
+                </a>
+                <h1 class="sr-only">AP Senac</h1>
+                <ul class="flex gap-8">
+                    <li>
+                        <a href="/src/index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
+                    </li>
+                    <li>
+                        <a href="/src/pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
+                    </li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="form-margin">
-            <div class="container container-flex">
-                <h2>Entre em contato conosco</h2>
-                <form action="#" method="GET" class="form-flex">
-                    <div class="flex-2-col nome-email">
-                        <div class="input-col">
-                            <label class="nome-input">Nome</label>
-                            <input type="text" placeholder="Seu nome" required>
+        <section class="bg-[#f1f1f1] py-14 mb-28">
+            <div class="container max-w-5xl mx-auto px-4">
+                <h2 class="mb-8 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
+                    Entre em contato conosco
+                </h2>
+                <form action="#" method="GET" class="bg-white p-6 rounded-lg space-y-6">
+                    <div class="flex flex-col md:flex-row gap-4">
+                        <div class="w-full">
+                            <label class="block font-semibold mb-1">Nome</label>
+                            <input type="text" placeholder="Seu nome" required class="w-full px-4 py-2 bg-[#f5f5f5] border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200" />
                         </div>
-                        <div class="input-col">
-                            <label class="email-input">Email</label>
-                            <input type="email" placeholder="Seu email" required>
+                        <div class="w-full">
+                            <label class="block font-semibold mb-1">Email</label>
+                            <input type="email" placeholder="Seu email" required class="w-full px-4 py-2 bg-[#f5f5f5] border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200" />
                         </div>
                     </div>
-                    <div class="flex-2-col telefone-select">
-                        <div class="input-col">
-                            <label class="tel-input">Telefone</label>
-                            <input type="tel" placeholder="(XX) XXXXX-XXXX" required pattern="[0-9]+$">
+
+                    <div class="flex flex-col md:flex-row gap-4">
+                        <div class="w-full">
+                            <label class="block font-semibold mb-1">Telefone</label>
+                            <input type="tel" placeholder="(XX) XXXXX-XXXX" pattern="[0-9]+$" required class="w-full px-4 py-2 bg-[#f5f5f5] border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200" />
                         </div>
-                        <div class="input-col">
-                            <label>Responsável</label>
-                            <select name="responsa" required>
+                        <div class="w-full">
+                            <label class="block font-semibold mb-1">Responsável</label>
+                            <select name="responsa" required class="w-full px-4 py-2 bg-[#f5f5f5] border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200">
                                 <option value="">Selecione</option>
                                 <option value="1">Sou aluno(a) Senac</option>
-                                <option value="2">Sou resposável de aluno(a)</option>
+                                <option value="2">Sou responsável de aluno(a)</option>
                                 <option value="3">Outro</option>
                             </select>
                         </div>
                     </div>
-                    <div class="flex-1-col">
-                        <label for="msg">Mensagem</label>
-                        <textarea maxlength="100" id="msg" required></textarea>
+
+                    <div>
+                        <label class="block font-semibold mb-1" for="msg">Mensagem</label>
+                        <textarea id="msg" maxlength="100" required class="w-full h-32 px-4 py-2 bg-[#f5f5f5] border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200 resize-none"></textarea>
                     </div>
-                    <div class="flex-2-col space-between">
-                        <div class="input-row">
-                            <input type="checkbox" id="novidades">
-                            <label for="novidades">Quero receber novidades do projeto</label>
+
+                    <div class="flex flex-col md:flex-row gap-4">
+                        <div class="flex items-center space-x-2">
+                            <input type="checkbox" id="novidades" class="h-4 w-4 text-blue-600 border-gray-300 rounded" />
+                            <label for="novidades" class="text-sm">Quero receber novidades do projeto</label>
                         </div>
-                        <div class="input-row">
-                            <input type="checkbox" id="integrante">
-                            <label for="integrante">Quero ser integrante do projeto</label>
+                        <div class="flex items-center space-x-2">
+                            <input type="checkbox" id="integrante" class="h-4 w-4 text-blue-600 border-gray-300 rounded" />
+                            <label for="integrante" class="text-sm">Quero ser integrante do projeto</label>
                         </div>
                     </div>
-                    <input type="submit" value="Enviar">
+
+                    <div class="text-end">
+                        <input type="submit" value="Enviar" class="px-6 py-2 bg-blue-600 text-white font-semibold rounded-md hover:bg-blue-700 transition duration-200 cursor-pointer" />
+                    </div>
                 </form>
+
             </div>
         </section>
     </main>
@@ -78,7 +96,7 @@
         <div class="container max-w-5xl mx-auto text-white">
             <div class="flex flex-col md:flex-row justify-center items-center">
                 <div>
-                    <h2 class="mb-4 text-2xl relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
                     <div class="flex justify-center items-center gap-4">
                         <div class="flex flex-col md:flex-row gap-3">
                             <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
