--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             <span class="z-10 text-xl font-bold text-white sm:text-2xl md:text-4xl lg:text-6xl ">
                 Projeto Apartamento Senac
             </span>
-            <span class="z-10 mt-4 text-sm text-white md:text-base">Onde inovação, natureza e aprendizado se encontram.
+            <span class="z-10 mt-4 text-sm text-white text-center">Onde inovação, natureza e aprendizado se encontram.
             </span>
         </section>
 
