--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="author" content="Marcos Pedro">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/src/styles/sobre.css"> <!--link css-->
+    <link rel="stylesheet" href="/src/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e8491958a0.js" crossorigin="anonymous"></script><!--icones-->
+    <script src="https://kit.fontawesome.com/e8491958a0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,13 +19,17 @@
                     <img src="/src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
-                <ul class="flex gap-8">
+                <ul class="flex flex-col md:flex-row text-center gap-8">
                     <li>
                         <a href="/src/index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
                         </a>
                     </li>
                     <li>
-                        <a href="/src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
+                        <a href="/src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
+                            before:content-[''] before:absolute before:bottom-0 before:left-0 
+                            before:w-full before:h-0.5 before:bg-[#DCDCDC] 
+                            before:scale-x-100 before:origin-center before:transition-transform 
+                            before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
                         <a href="/src/pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
@@ -37,46 +41,31 @@
     <main>
         <section class="bg-[#f1f1f1] py-14 mb-28">
             <div class="container max-w-5xl mx-auto px-4">
-                <h2 class="mb-8 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
-                    Sobre o projeto
-                </h2>
+                <h2 class="mb-8 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#222]">Sobre o projeto</h2>
                 <div class="flex flex-col md:flex-row gap-6 items-center">
                     <img src="/src/imgs/image_index.jpg" alt="Imagem do projeto" class="w-full md:w-1/2 rounded shadow-md object-cover" />
                     <div class="text-justify space-y-4 text-base md:text-lg">
-                        <p>
-                            O projeto está localizado em Santo Amaro, zona sul de São Paulo, em uma área de 154 mil m² com prédios modernos, integrados à natureza e à universidade.
-                        </p>
+                        <p>O projeto está localizado em Santo Amaro, zona sul de São Paulo, em uma área de 154 mil m² com prédios modernos, integrados à natureza e à universidade.</p>
                         <p>São 150 apartamentos de 42m².</p>
-                        <p>
-                            Aluguel mensal de R$550,00, exclusivo para <strong>alunos matriculados no SENAC</strong>.
-                        </p>
+                        <p>Aluguel mensal de R$550,00, exclusivo para <strong>alunos matriculados no SENAC</strong>.</p>
                         <ul class="list-disc list-inside space-y-1">
                             <li>Apartamentos mobiliados (cama, armários, fogão, geladeira e máquina de lavar)</li>
                             <li>Internet e água incluídas no valor</li>
                         </ul>
                     </div>
-
                 </div>
             </div>
         </section>
+
         <section class="bg-[#222]">
             <div class="container max-w-5xl mx-auto py-16 px-4">
-                <h2 class="mb-10 relative pb-2 text-2xl md:text-3xl font-bold block mx-auto text-white w-fit before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
-                    Interior do apartamento
-                </h2>
-
-                <!-- Imagem destaque -->
+                <h2 class="mb-10 relative pb-2 text-2xl md:text-3xl font-bold block mx-auto text-white w-fit before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Interior do apartamento</h2>
                 <div class="mb-10">
                     <img src="/src/imgs/Imagem_Interior4_900_600.jpg" alt="Imagem do interior" class="w-full rounded-md shadow-md object-cover" />
                 </div>
-
-                <!-- Grid de imagens -->
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-6">
-                    <!-- Primeira linha -->
                     <img src="/src/imgs/Imagem_Interior_900_631.jpg" alt="" class="w-full rounded-md object-cover" />
                     <img src="/src/imgs/Imagem_Interior2_900_601.jpg" alt="" class="w-full rounded-md object-cover" />
-
-                    <!-- Linha com destaque da terceira imagem à esquerda, e duas empilhadas à direita -->
                     <div class="sm:col-span-1">
                         <img src="/src/imgs/Imagem_Interior3_667_800.jpg" alt="" class="w-full h-full rounded-md object-cover" />
                     </div>
@@ -85,89 +74,69 @@
                         <img src="/src/imgs/interior_ap.jpg" alt="" class="w-full rounded-md object-cover" />
                     </div>
                 </div>
-
             </div>
         </section>
 
-        <section class="bg-[#f1f1f1s] py-24">
+        <section class="bg-[#f1f1f1] py-24">
             <div class="container max-w-5xl mx-auto px-4 md:px-0">
-
-                <h2 class="mb-4 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
-                    Vantagens
-                </h2>
-
+                <h2 class="mb-4 text-2xl md:text-3xl block font-bold text-center relative pb-2 w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#222]">Vantagens</h2>
                 <div class="space-y-12">
-                    <!-- Centro Esportivo -->
                     <div>
                         <h3 class="text-2xl font-bold mb-6 text-center">Centro esportivo do SENAC</h3>
                         <ul class="space-y-10">
                             <li>
                                 <div class="flex flex-col md:flex-row items-center gap-6">
                                     <img src="/src/imgs/Imagem_centro2_900_600.jpg" alt="Centro Esportivo 1" class="w-full md:w-1/2 rounded-md object-cover" />
-                                    <p>
-                                        O Centro Esportivo conta com duas quadras poliesportivas cobertas para futebol de salão, basquetebol e voleibol com dimensões oficiais. Todas possuem piso emborrachado e placar eletrônico.
-                                    </p>
+                                    <p>O Centro Esportivo conta com duas quadras poliesportivas cobertas para futebol de salão, basquetebol e voleibol com dimensões oficiais. Todas possuem piso emborrachado e placar eletrônico.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="flex flex-col-reverse md:flex-row items-center gap-6">
-                                    <p class="md:text-end">
-                                        Além disso, possui uma quadra de squash, duas quadras de tênis também com piso emborrachado, dois campos de futebol 7 society com grama sintética aprovada pela Federação Internacional de Futebol e uma quadra poliesportiva externa sem cobertura.
-                                    </p>
+                                    <p class="md:text-end">Além disso, possui uma quadra de squash, duas quadras de tênis também com piso emborrachado, dois campos de futebol 7 society com grama sintética aprovada pela Federação Internacional de Futebol e uma quadra poliesportiva externa sem cobertura.</p>
                                     <img src="/src/imgs/Imagem_centro1_900_600.jpg" alt="Centro Esportivo 2" class="w-full md:w-1/2 rounded-md object-cover" />
                                 </div>
                             </li>
                             <li>
                                 <div class="flex flex-col md:flex-row items-center gap-6">
                                     <img src="/src/imgs/Imagem_centro3_900_600.jpg" alt="Centro Esportivo 3" class="w-full md:w-1/2 rounded-md object-cover" />
-                                    <p>
-                                        A infraestrutura do Centro Esportivo dispõe de vestiário feminino e masculino, todos com armários e chuveiros aquecidos. Conta ainda com aparelhos de ferro para circuito, todo material necessário para a prática de atividades esportivas, como bolas, coletes, apitos e etc.
-                                    </p>
+                                    <p>A infraestrutura do Centro Esportivo dispõe de vestiário feminino e masculino, todos com armários e chuveiros aquecidos. Conta ainda com aparelhos de ferro para circuito, todo material necessário para a prática de atividades esportivas, como bolas, coletes, apitos e etc.</p>
                                 </div>
                             </li>
                         </ul>
                     </div>
-
-                    <!-- Academia -->
                     <div>
                         <h3 class="text-2xl font-bold mb-6 text-center">Academia</h3>
                         <ul class="space-y-10">
                             <li>
                                 <div class="flex flex-col-reverse md:flex-row items-center gap-6">
-                                    <p class="md:text-end">
-                                        Com área útil de 7.600 m² e acesso a pessoas com deficiência, a academia oferece modernidade e tecnologia de ponta em espaço arquitetonicamente planejado com ambientes amplos e integrados com conforto térmico/acústico imprescindível para a prática de atividades físicas.
-                                    </p>
+                                    <p class="md:text-end">Com área útil de 7.600 m² e acesso a pessoas com deficiência, a academia oferece modernidade e tecnologia de ponta em espaço arquitetonicamente planejado com ambientes amplos e integrados com conforto térmico/acústico imprescindível para a prática de atividades físicas.</p>
                                     <img src="/src/imgs/Imagem_academia3_900_600.jpg" alt="Academia 1" class="w-full md:w-1/2 rounded-md object-cover" />
                                 </div>
                             </li>
                             <li>
                                 <div class="flex flex-col md:flex-row items-center gap-6">
                                     <img src="/src/imgs/Imagem_academia2_900_600.jpg" alt="Academia 2" class="w-full md:w-1/2 rounded-md object-cover" />
-                                    <p>
-                                        Aulas de diferentes modalidades terrestres e aquáticas, para crianças, adolescentes e adultos. Mergulho, Natação, Hidroginástica, Deep Running, Acqua Bike e In Door, Boxe, Jiu Jitsu, Judô, Ritmos, Dança do Ventre, Yoga, Musculação, Aeróbico e Pilates.
-                                    </p>
+                                    <p>Aulas de diferentes modalidades terrestres e aquáticas, para crianças, adolescentes e adultos. Mergulho, Natação, Hidroginástica, Deep Running, Acqua Bike e In Door, Boxe, Jiu Jitsu, Judô, Ritmos, Dança do Ventre, Yoga, Musculação, Aeróbico e Pilates.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="flex flex-col-reverse md:flex-row items-center gap-6">
-                                    <p class="md:text-end">
-                                        Oferece descontos especiais aos moradores do complexo residencial do Senac São Paulo.
-                                    </p>
+                                    <p class="md:text-end">Oferece descontos especiais aos moradores do complexo residencial do Senac São Paulo.</p>
                                     <img src="/src/imgs/Imagem_aluno_900_600.jpg" alt="Academia 3" class="w-full md:w-1/2 rounded-md object-cover" />
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
+
     <footer class="bg-[#222] pt-32">
         <div class="container max-w-5xl mx-auto text-white">
             <div class="flex flex-col md:flex-row justify-center items-center">
                 <div>
-                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto font-bold before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
                     <div class="flex justify-center items-center gap-4">
                         <div class="flex flex-col md:flex-row gap-3">
                             <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
@@ -180,8 +149,6 @@
                     </div>
                 </div>
             </div>
-
-            <p class="text-center mt-32 pb-4">Copyright &copy; 2025</p>
         </div>
     </footer>
 </body>
