--- a/src/pages/formulario.html
+++ b/src/pages/formulario.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Marcos Pedro">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/src/styles/style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e8491958a0.js" crossorigin="anonymous"></script>
 </head>
@@ -15,20 +15,20 @@
     <header class="bg-[#222]">
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
-                <a href="/src/index.html" class="link-logo">
-                    <img src="/src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
+                <a href="src/index.html" class="link-logo">
+                    <img src="src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex flex-col md:flex-row text-center gap-8">
                     <li>
-                        <a href="/src/index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
+                        <a href="src/index.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Início
                         </a>
                     </li>
                     <li>
-                        <a href="/src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
+                        <a href="src/pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="/src/pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
+                        <a href="src/pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
                             before:content-[''] before:absolute before:bottom-0 before:left-0 
                             before:w-full before:h-0.5 before:bg-[#DCDCDC] 
                             before:scale-x-100 before:origin-center before:transition-transform 
