--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
                 <a href="index.html" class="link-logo">
-                    <img src="/src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
+                    <img src="./src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex flex-col md:flex-row text-center gap-8">
@@ -40,7 +40,7 @@
     </header>
 
     <main>
-        <section class="relative h-[60vh] bg-cover bg-center flex items-center justify-center text-white px-4 before:absolute before:h-[60vh] before:w-full before:bg-[rgba(0,0,0,0.5)] flex flex-col" style="background-image: url('/src/imgs/image_banner.jpg')">
+        <section class="relative h-[60vh] bg-cover bg-center flex items-center justify-center text-white px-4 before:absolute before:h-[60vh] before:w-full before:bg-[rgba(0,0,0,0.5)] flex flex-col" style="background-image: url('./src/imgs/image_banner.jpg')">
             <span class="z-10 text-xl font-bold text-white sm:text-2xl md:text-4xl lg:text-6xl ">
                 Projeto Apartamento Senac
             </span>
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="w-full">
-                        <img src="/src/imgs/image_index.jpg" alt="Imagem do projeto" class="object-cover w-full h-auto max-w-full shadow-md rounded-xl" />
+                        <img src="./src/imgs/image_index.jpg" alt="Imagem do projeto" class="object-cover w-full h-auto max-w-full shadow-md rounded-xl" />
                     </div>
                 </div>
             </div>
