fix: viewport mobile

--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e8491958a0.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
@@ -133,10 +135,12 @@
     </main>
 
     <footer class="bg-[#222] pt-32">
-        <div class="container max-w-5xl mx-auto text-white">
+        <div class="container max-w-5xl mx-auto text-white px-4">
             <div class="flex flex-col md:flex-row justify-center items-center">
                 <div>
-                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto font-bold before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">Siga-nos</h2>
+                    <h2 class="mb-4 text-2xl relative pb-2 block w-fit mx-auto font-bold before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC]">
+                        Siga-nos
+                    </h2>
                     <div class="flex justify-center items-center gap-4">
                         <div class="flex flex-col md:flex-row gap-3">
                             <span><a href="#"><i class="fab fa-facebook-square text-2xl"></i>Facebook</a></span>
@@ -149,6 +153,8 @@
                     </div>
                 </div>
             </div>
+
+            <p class="text-center mt-32 pb-4">Copyright &copy; 2025</p>
         </div>
     </footer>
 </body>
