--- a/src/pages/formulario.html
+++ b/src/pages/formulario.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <header class="bg-[#222]">
+    <header class="bg-[#222] py-4 md:py-0">
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
                 <a href="../src/index.html" class="link-logo">
-                    <img src="../src/imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
+                    <img src="../imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
                 <ul class="flex flex-col md:flex-row text-center gap-8">
@@ -27,10 +27,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
+                        <a href="./sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="./pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
+                        <a href="./formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
                             before:content-[''] before:absolute before:bottom-0 before:left-0 
                             before:w-full before:h-0.5 before:bg-[#DCDCDC] 
                             before:scale-x-100 before:origin-center before:transition-transform 
