--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -27,14 +27,14 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./pages/sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
+                        <a href="./sobre.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] 
                             before:content-[''] before:absolute before:bottom-0 before:left-0 
                             before:w-full before:h-0.5 before:bg-[#DCDCDC] 
                             before:scale-x-100 before:origin-center before:transition-transform 
                             before:duration-300 before:pointer-events-none">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="./pages/formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
+                        <a href="./formulario.html" class="font-bold tracking-wider relative inline-block px-2 py-1 text-[#fff] before:content-[''] before:absolute before:bottom-0 before:left-0 before:w-full before:h-0.5 before:bg-[#DCDCDC] before:scale-x-0 hover:before:scale-x-100 before:origin-center before:transition-transform before:duration-300 before:pointer-events-none">Contato</a>
                     </li>
                 </ul>
             </nav>
