--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="bg-[#222]">
+    <header class="bg-[#222] py-4 md:py-0">
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
                 <a href="index.html" class="link-logo">
