--- a/src/pages/formulario.html
+++ b/src/pages/formulario.html
@@ -17,7 +17,7 @@
     <header class="bg-[#222] py-4 md:py-0">
         <div class="container mx-auto max-w-7xl">
             <nav class="flex flex-col items-center justify-center md:flex-row md:justify-between">
-                <a href="../src/index.html" class="link-logo">
+                <a href="../../index.html" class="link-logo">
                     <img src="../imgs/LogoBranco_Sem_Fundo.png" class="max-w-[200px] max-h-[60px] m-2" alt="logo">
                 </a>
                 <h1 class="sr-only">AP Senac</h1>
